update: refactor code in order to gain coverage